# hiring-challenge

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  todo.txt
.github/workflow/: tests.yml
.github/workflows/: main.yml
api/: main.py
cluster/: cluster.py  core.py
src/api/: main.py
src/cluster/: core.py
tests/: test_api.py  test_cluster.py
